--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,25 +1,22 @@
 {
-  "branches": [
-    "master",
-    "main"
-  ],
+  "branches": ["master", "main"],
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
       {
         "preset": "conventionalcommits",
         "releaseRules": [
-          {"type": "feat", "release": "minor"},
-          {"type": "fix", "release": "patch"},
-          {"type": "perf", "release": "patch"},
-          {"type": "revert", "release": "patch"},
-          {"type": "docs", "release": false},
-          {"type": "style", "release": false},
-          {"type": "chore", "release": false},
-          {"type": "refactor", "release": "patch"},
-          {"type": "test", "release": false},
-          {"type": "build", "release": "patch"},
-          {"type": "ci", "release": false}
+          { "type": "feat", "release": "minor" },
+          { "type": "fix", "release": "patch" },
+          { "type": "perf", "release": "patch" },
+          { "type": "revert", "release": "patch" },
+          { "type": "docs", "release": false },
+          { "type": "style", "release": false },
+          { "type": "chore", "release": false },
+          { "type": "refactor", "release": "patch" },
+          { "type": "test", "release": false },
+          { "type": "build", "release": "patch" },
+          { "type": "ci", "release": false }
         ]
       }
     ],
@@ -29,17 +26,17 @@
         "preset": "conventionalcommits",
         "presetConfig": {
           "types": [
-            {"type": "feat", "section": "🚀 Features"},
-            {"type": "fix", "section": "🐛 Bug Fixes"},
-            {"type": "perf", "section": "⚡ Performance Improvements"},
-            {"type": "revert", "section": "⏪ Reverts"},
-            {"type": "refactor", "section": "♻️ Code Refactoring"},
-            {"type": "build", "section": "📦 Build System"},
-            {"type": "docs", "section": "📚 Documentation", "hidden": true},
-            {"type": "style", "section": "💄 Styles", "hidden": true},
-            {"type": "chore", "section": "🔧 Chores", "hidden": true},
-            {"type": "test", "section": "✅ Tests", "hidden": true},
-            {"type": "ci", "section": "👷 CI/CD", "hidden": true}
+            { "type": "feat", "section": "🚀 Features" },
+            { "type": "fix", "section": "🐛 Bug Fixes" },
+            { "type": "perf", "section": "⚡ Performance Improvements" },
+            { "type": "revert", "section": "⏪ Reverts" },
+            { "type": "refactor", "section": "♻️ Code Refactoring" },
+            { "type": "build", "section": "📦 Build System" },
+            { "type": "docs", "section": "📚 Documentation", "hidden": true },
+            { "type": "style", "section": "💄 Styles", "hidden": true },
+            { "type": "chore", "section": "🔧 Chores", "hidden": true },
+            { "type": "test", "section": "✅ Tests", "hidden": true },
+            { "type": "ci", "section": "👷 CI/CD", "hidden": true }
           ]
         }
       }
@@ -62,17 +59,15 @@
       {
         "successComment": "🎉 This ${issue.pull_request ? 'PR is included' : 'issue has been resolved'} in version ${nextRelease.version} :tada:",
         "labels": ["released"],
-        "releasedLabels": ["released<%= nextRelease.channel ? ` on @\${nextRelease.channel}` : \"\" %> from <%= branch.name %>"]
+        "releasedLabels": [
+          "released<%= nextRelease.channel ? ` on @\${nextRelease.channel}` : \"\" %> from <%= branch.name %>"
+        ]
       }
     ],
     [
       "@semantic-release/git",
       {
-        "assets": [
-          "CHANGELOG.md",
-          "package.json",
-          "package-lock.json"
-        ],
+        "assets": ["CHANGELOG.md", "package.json", "package-lock.json"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
