--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "semantic-release": "^24.2.7",
+    "terser": "^5.44.0",
     "vite": "^6.1.2",
     "vitest": "^2.1.8",
     "wait-on": "^8.0.2"
