--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -538,6 +538,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: csfrace-frontend:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
