feat(ci): upgrade Codecov integration to v5 with token authentication
- Update codecov/codecov-action from v4 to v5
- Add CODECOV_TOKEN for secure authentication
- Add repository slug for proper identification
- Remove incorrect platform condition (single ubuntu runner)
- Ensures coverage reports are properly uploaded to Codecov dashboard

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -405,12 +405,13 @@ jobs:
           retention-days: 7
 
       - name: Upload coverage to Codecov
-        if: matrix.platform == 'Ubuntu'
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage/lcov.info
           flags: unit
           name: codecov-unit
+          slug: zachatkinson/csfrace-scrape-front
 
   # E2E testing with Playwright
   e2e-tests:
@@ -717,11 +718,13 @@ jobs:
           echo "Coverage data from unit tests, integration tests, and E2E tests combined"
 
       - name: Upload final coverage
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage/lcov.info
           flags: combined
           name: codecov-combined
+          slug: zachatkinson/csfrace-scrape-front
 
       - name: Create final summary
         run: |
