--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@codecov/vite-plugin": "^1.9.1",
     "@eslint/js": "^9.35.0",
     "@playwright/test": "^1.55.0",
     "@semantic-release/changelog": "^6.0.3",
