feat(codecov): add Test Analytics for test insights and flaky test detection
- Configure Vitest to output JUnit XML test results
- Add codecov/test-results-action@v1 to CI for unit and integration tests
- Upload test results with appropriate flags (unit/integration)
- Enables Codecov Test Analytics dashboard for:
  - Test run times and performance trends
  - Failure rates and flaky test detection
  - Test insights and optimization recommendations
  - Failed test reports and analysis

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -413,6 +413,15 @@ jobs:
           name: codecov-unit
           slug: zachatkinson/csfrace-scrape-front
 
+      - name: Upload test results to Codecov
+        if: always()
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./test-results.junit.xml
+          flags: unit
+          name: codecov-unit-tests
+
   # E2E testing with Playwright
   e2e-tests:
     name: E2E Tests - ${{ matrix.browser }}
@@ -530,6 +539,15 @@ jobs:
           flags: integration
           name: codecov-integration
           slug: zachatkinson/csfrace-scrape-front
+
+      - name: Upload test results to Codecov
+        if: always()
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./test-results.junit.xml
+          flags: integration
+          name: codecov-integration-tests
 
   # Docker build and security scanning
   docker-build-security:
