--- a/.dockerignore
+++ b/.dockerignore
@@ -4,19 +4,23 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+.pnpm-store/
 
 # Build outputs
 dist/
+build/
 .astro/
+.vite/
 .vercel/
 .netlify/
 
-# Environment files
+# Environment files (include in image via secrets/configs)
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.*.local
 
 # IDE and editor files
 .vscode/
@@ -24,6 +28,7 @@ dist/
 *.swp
 *.swo
 *~
+.editorconfig
 
 # OS generated files
 .DS_Store
@@ -35,26 +40,55 @@ ehthumbs.db
 Thumbs.db
 
 # Logs
-logs
+logs/
 *.log
+lerna-debug.log*
 
-# Coverage reports
+# Coverage reports and testing
 coverage/
 .nyc_output/
+test-results/
+playwright-report/
+.playwright/
+*.lcov
 
-# Temporary files
+# Temporary files and caches
 .tmp/
 .cache/
+.parcel-cache/
 
 # Git
 .git/
 .gitignore
+.gitattributes
 
 # Docker
-Dockerfile
+Dockerfile*
 .dockerignore
+docker-compose*.yml
 
-# Testing
-.playwright/
-test-results/
-playwright-report/
+# CI/CD
+.github/
+.gitlab-ci.yml
+.travis.yml
+.circleci/
+
+# Documentation
+README.md
+CHANGELOG.md
+LICENSE
+*.md
+
+# Development files
+.eslintrc*
+.prettierrc*
+.prettierignore
+tailwind.config.*
+postcss.config.*
+vitest.config.*
+playwright.config.*
+
+# Misc
+.husky/
+.commitlint*
+.editorconfig
