chore: improve logging and HTTP-only cookie authentication checks
- Add centralized logger usage across components
- Improve authentication status checking via /auth/me endpoint
- Clean up old localStorage/sessionStorage tokens
- Add debug HTML files for testing
- Update API client configuration

--- a/package.json
+++ b/package.json
@@ -84,5 +84,8 @@
     "vite": "^6.1.2",
     "vitest": "^2.1.8",
     "wait-on": "^8.0.2"
+  },
+  "optionalDependencies": {
+    "lightningcss-wasm": "^1.30.1"
   }
 }
