feat: add proper integration tests infrastructure
- Create vitest.config.integration.ts for integration test configuration
- Add test:integration script using Vitest (not Playwright)
- Create tests/integration/api-health.test.ts with API integration tests
- Keep tests/e2e/integration.spec.ts as E2E smoke tests

Integration tests:
- Test API endpoints directly without browser
- Use fetch() to test backend endpoints
- Run with mock backend in CI
- Separate from E2E browser tests

Fixes CI Integration Tests job that was failing due to missing test:integration script.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:debug": "playwright test --debug",
     "test:unit": "vitest",
     "test:unit:coverage": "vitest --coverage",
+    "test:integration": "vitest run --config vitest.config.integration.ts",
     "test:e2e": "playwright test",
     "test:e2e:local": "PLAYWRIGHT_BASE_URL=http://localhost playwright test",
     "start:mock-backend": "node scripts/mock-backend.js"
