fix: add security-events permission for SARIF upload
- Added permissions block to docker-build-security job
- Required for github/codeql-action/upload-sarif@v3
- Fixes 'Resource not accessible by integration' error

Permissions added:
- contents: read (checkout code)
- security-events: write (upload SARIF results)
- actions: read (workflow metadata)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -551,6 +551,10 @@ jobs:
     timeout-minutes: 20
     needs: detect-changes
     if: needs.detect-changes.outputs.should-run-docker == 'true'
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
 
     steps:
       - name: Checkout code
